--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta
+    <meta
       name="description"
-      content="This website simplifes the concept of AI, and illustrates the 
-      some of the algorithms."
+      content="This website simplifes the concept of AI, and illustrates some of the algorithms."
       author="Hassan Alsayhah"
-    /> -->
+    />
     <title>AI Simplified</title>
   </head>
   <body>
