--- a/AI.html
+++ b/AI.html
@@ -23,6 +23,119 @@
       about making machines smart and helping them do tasks that usually need
       human thinking.
     </p>
+
+    <table border="1" width="100" height="200">
+      <tr>
+        <td>
+          <strike>Hey</strike>
+          <div>"Siri"</div>
+        </td>
+        <td rowspan="4">
+          <img src="/assets/iphone_1.png" alt="" height="400" />
+        </td>
+        <td rowspan="2">
+          <img src="/assets/maps.png" alt="" width="100" />
+          <div>Offline</div>
+          <div>maps</div>
+        </td>
+        <td rowspan="2" colspan="4">
+          <img src="/assets/two_hands.png" alt="" width="300" />
+        </td>
+        <!-- <td rowspan="2" colspan="3">cell4</td> -->
+        <!-- <td>cell5</td> -->
+        <!-- <td>cell6</td> -->
+        <td>
+          <img src="/assets/swipe.png" alt="" />
+          <div><img src="/assets/to_reply.png" alt="" /></div>
+        </td>
+      </tr>
+
+      <tr>
+        <td rowspan="2">
+          <img src="/assets/airtag.png" alt="" width="100" />
+          <div>Find My</div>
+          <div>Item Sharing</div>
+        </td>
+        <!-- <td>cell9</td> -->
+        <!-- <td>
+          Offline
+          <div>maps</div>
+        </td> -->
+        <!-- <td>cell b</td> -->
+        <!-- <td>cell11</td>
+        <td>cell12</td>
+        <td>cell13</td> -->
+        <td rowspan="3">
+          <img src="/assets/faceTime.PNG" alt="" height="250" />
+        </td>
+      </tr>
+
+      <tr>
+        <!-- <td>cell15</td> -->
+        <!-- <td>cell16</td> -->
+        <td colspan="4" rowspan="2"><img src="/assets/IOS.PNG" alt="" /></td>
+        <!-- <td>cell c</td>
+        <td>cell18</td>
+        <td>cell19</td> -->
+        <td rowspan="2">
+          <img src="/assets/app.png" alt="" height="150" />
+          <div>Journal</div>
+        </td>
+        <!-- <td>cell21</td> -->
+      </tr>
+
+      <tr>
+        <td>
+          <img src="/assets/dog.png" alt="" />
+          <div>Pets albums in Photos</div>
+        </td>
+        <!-- <td>cell23</td> -->
+        <!-- <td colspan="4">cell24</td> -->
+        <!-- <td>cell d</td>
+        <td>cell25</td>
+        <td>cell26</td> -->
+        <!-- <td>cell27</td> -->
+        <!-- <td>cell28</td> -->
+      </tr>
+
+      <tr>
+        <td rowspan="2" colspan="2">
+          <img src="/assets/calendar.png" alt="" width="200" />
+          <div>StandBY</div>
+        </td>
+        <!-- <td rowspan="2">cell30</td> -->
+        <td rowspan="2" colspan="2">
+          <img src="/assets/check.png" alt="" width="100" />
+          <div>Check in</div>
+        </td>
+        <!-- <td>cell a</td> -->
+        <td colspan="4">
+          <img src="/assets/sticker_dog.png" alt="" height="100" /> Live
+          Stickers
+          <img src="/assets/stricker_flower.png" alt="" height="100" />
+        </td>
+        <!-- <td>cell33</td>
+        <td>cell34</td>
+        <td>cell35</td> -->
+      </tr>
+
+      <tr>
+        <!-- <td>cell36</td> -->
+        <!-- <td>cell37</td> -->
+        <!-- <td>cell38</td>
+        <td>cell a</td>  -->
+        <td colspan="2">
+          <img src="/assets/phone_bottom.png" alt="" width="100" />Live
+          Voivemail
+        </td>
+        <!-- <td>cell40</td> -->
+        <td colspan="2">
+          Improved autocorrect <img src="/assets/cursor.png" alt="" />
+        </td>
+        <!-- <td>cell42</td> -->
+      </tr>
+    </table>
+
     <a href="/index.html">Home</a>
   </body>
 </html>
