--- a/AI.html
+++ b/AI.html
@@ -8,28 +8,33 @@
   </head>
 
   <body>
-    <h1>Artificial Intelligence</h1>
+    <header>
+      <nav>
+        <a href="/index.html">Home</a>
+        <a href="/AI.html">Artificial Intelligence</a>
+        <a href="/ML.html">Machine Learning</a>
+        <a href="/form.html">Contribute</a>
+      </nav>
+      <h1>Artificial Intelligence</h1>
+    </header>
 
-    <!-- rows: 6 cols: 6 -->
-
-    <p>
-      Artificial Intelligence (AI) is like giving computers a brain. It's about
-      making machines think and act like humans. Imagine a robot that can chat
-      with you, play games, or even drive a car all on its own. AI uses data and
-      algorithms to learn and solve problems, just like how we learn from our
-      experiences. It can recognize faces, understand speech, and even make
-      decisions. AI is super helpful in many things like virtual assistants
-      (like Siri or Alexa), medical diagnoses, and self-driving cars. It's all
-      about making machines smart and helping them do tasks that usually need
-      human thinking.
-    </p>
+    <article>
+      <p>
+        Artificial Intelligence (AI) is like giving computers a brain. It's
+        about making machines think and act like humans. Imagine a robot that
+        can chat with you, play games, or even drive a car all on its own. AI
+        uses data and algorithms to learn and solve problems, just like how we
+        learn from our experiences. It can recognize faces, understand speech,
+        and even make decisions. AI is super helpful in many things like virtual
+        assistants (like Siri or Alexa), medical diagnoses, and self-driving
+        cars. It's all about making machines smart and helping them do tasks
+        that usually need human thinking.
+      </p>
+    </article>
 
     <table border="1" width="100" height="200">
       <tr>
-        <td>
-          <strike>Hey</strike>
-          <div>"Siri"</div>
-        </td>
+        <td><strike>Hey</strike> "Siri"</td>
         <td rowspan="4">
           <img src="/assets/iphone_1.png" alt="" height="400" />
         </td>
@@ -41,9 +46,7 @@
         <td rowspan="2" colspan="4">
           <img src="/assets/two_hands.png" alt="" width="300" />
         </td>
-        <!-- <td rowspan="2" colspan="3">cell4</td> -->
-        <!-- <td>cell5</td> -->
-        <!-- <td>cell6</td> -->
+
         <td>
           <img src="/assets/swipe.png" alt="" />
           <div><img src="/assets/to_reply.png" alt="" /></div>
@@ -56,32 +59,19 @@
           <div>Find My</div>
           <div>Item Sharing</div>
         </td>
-        <!-- <td>cell9</td> -->
-        <!-- <td>
-          Offline
-          <div>maps</div>
-        </td> -->
-        <!-- <td>cell b</td> -->
-        <!-- <td>cell11</td>
-        <td>cell12</td>
-        <td>cell13</td> -->
+
         <td rowspan="3">
           <img src="/assets/faceTime.PNG" alt="" height="250" />
         </td>
       </tr>
 
       <tr>
-        <!-- <td>cell15</td> -->
-        <!-- <td>cell16</td> -->
         <td colspan="4" rowspan="2"><img src="/assets/IOS.PNG" alt="" /></td>
-        <!-- <td>cell c</td>
-        <td>cell18</td>
-        <td>cell19</td> -->
+
         <td rowspan="2">
           <img src="/assets/app.png" alt="" height="150" />
           <div>Journal</div>
         </td>
-        <!-- <td>cell21</td> -->
       </tr>
 
       <tr>
@@ -89,13 +79,6 @@
           <img src="/assets/dog.png" alt="" />
           <div>Pets albums in Photos</div>
         </td>
-        <!-- <td>cell23</td> -->
-        <!-- <td colspan="4">cell24</td> -->
-        <!-- <td>cell d</td>
-        <td>cell25</td>
-        <td>cell26</td> -->
-        <!-- <td>cell27</td> -->
-        <!-- <td>cell28</td> -->
       </tr>
 
       <tr>
@@ -103,36 +86,28 @@
           <img src="/assets/calendar.png" alt="" width="200" />
           <div>StandBY</div>
         </td>
-        <!-- <td rowspan="2">cell30</td> -->
+
         <td rowspan="2" colspan="2">
           <img src="/assets/check.png" alt="" width="100" />
           <div>Check in</div>
         </td>
-        <!-- <td>cell a</td> -->
+
         <td colspan="4">
           <img src="/assets/sticker_dog.png" alt="" height="100" /> Live
           Stickers
           <img src="/assets/stricker_flower.png" alt="" height="100" />
         </td>
-        <!-- <td>cell33</td>
-        <td>cell34</td>
-        <td>cell35</td> -->
       </tr>
 
       <tr>
-        <!-- <td>cell36</td> -->
-        <!-- <td>cell37</td> -->
-        <!-- <td>cell38</td>
-        <td>cell a</td>  -->
         <td colspan="2">
           <img src="/assets/phone_bottom.png" alt="" width="100" />Live
           Voivemail
         </td>
-        <!-- <td>cell40</td> -->
+
         <td colspan="2">
           Improved autocorrect <img src="/assets/cursor.png" alt="" />
         </td>
-        <!-- <td>cell42</td> -->
       </tr>
     </table>
 
