--- a/index.html
+++ b/index.html
@@ -12,17 +12,27 @@
     <title>AI Simplified</title>
   </head>
   <body>
-    <h1>Who are we?</h1>
-    <img src="/assets/AI-logo.png" alt="A logo of Simplified AI." width="550" />
+    <header>
+      <nav>
+        <a href="/index.html">Home</a>
+        <a href="/AI.html">Artificial Intelligence</a>
+        <a href="/ML.html">Machine Learning</a>
+        <a href="/form.html">Contribute</a>
+      </nav>
+      <h1>Who are we?</h1>
+      <img
+        src="/assets/AI-logo.png"
+        alt="A logo of Simplified AI."
+        width="550"
+      />
+    </header>
     <p>
       This website simplifes the concept of AI, and illustrates some of the
       algorithms.
     </p>
-    <div>
-      <a href="/AI.html">Artificial Intelligence</a>
-      <a href="/ML.html">Machine Learning</a>
+    <footer>
       <a href="/form.html">Contribute</a>
       <a href="/contactInfo.html">Contact us</a>
-    </div>
+    </footer>
   </body>
 </html>
