--- a/thank.html
+++ b/thank.html
@@ -6,8 +6,11 @@
     <title>Thank page</title>
   </head>
   <body>
-    <h1>Your Form was Submitted Successfully!</h1>
-    <h1>Thank you!</h1>
+    <header>
+      <h1>Your Form was Submitted Successfully!</h1>
+      <h1>Thank you!</h1>
+    </header>
+
     <a href="/index.html">Home</a>
   </body>
 </html>
