--- a/contactInfo.html
+++ b/contactInfo.html
@@ -82,6 +82,11 @@
       </form>
     </main>
 
-    <a href="/index.html">Home</a>
+    <footer>
+      &copy; created by Hassan Alsayhah
+      <a href="index.html">Home</a>
+      <a href="/form.html">Contribute</a>
+      <a href="/contactInfo.html">Contact us</a>
+    </footer>
   </body>
 </html>
