--- a/form.html
+++ b/form.html
@@ -204,6 +204,11 @@
       </div>
     </form>
 
-    <a href="/index.html">Home</a>
+    <footer>
+      &copy; created by Hassan Alsayhah
+      <a href="index.html">Home</a>
+      <a href="/form.html">Contribute</a>
+      <a href="/contactInfo.html">Contact us</a>
+    </footer>
   </body>
 </html>
