--- a/thank.html
+++ b/thank.html
@@ -11,6 +11,9 @@
       <h1>Thank you!</h1>
     </header>
 
-    <a href="/index.html">Home</a>
+    <footer>
+      &copy; created by Hassan Alsayhah
+      <a href="index.html">Home</a>
+    </footer>
   </body>
 </html>
