--- a/AI.html
+++ b/AI.html
@@ -111,6 +111,11 @@
       </tr>
     </table>
 
-    <a href="/index.html">Home</a>
+    <footer>
+      &copy; created by Hassan Alsayhah
+      <a href="index.html">Home</a>
+      <a href="/form.html">Contribute</a>
+      <a href="/contactInfo.html">Contact us</a>
+    </footer>
   </body>
 </html>
