--- a/ML.html
+++ b/ML.html
@@ -110,6 +110,11 @@
       </table>
     </section>
 
-    <a href="/index.html">Home</a>
+    <footer>
+      &copy; created by Hassan Alsayhah
+      <a href="index.html">Home</a>
+      <a href="/form.html">Contribute</a>
+      <a href="/contactInfo.html">Contact us</a>
+    </footer>
   </body>
 </html>
