--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       algorithms.
     </p>
     <footer>
+      &copy; created by Hassan Alsayhah
       <a href="/form.html">Contribute</a>
       <a href="/contactInfo.html">Contact us</a>
     </footer>
