--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="This website simplifes the concept of AI, and illustrates some of the algorithms."
       author="Hassan Alsayhah"
     />
+    <link rel="stylesheet" href="dark_theme.css" />
     <title>AI Simplified</title>
   </head>
   <body>
