--- a/ML.html
+++ b/ML.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="dark_theme.css" />
     <title>ML Simplified</title>
   </head>
 
