--- a/thank.html
+++ b/thank.html
@@ -13,8 +13,10 @@
     </header>
 
     <footer>
-      &copy; created by Hassan Alsayhah
-      <a href="index.html">Home</a>
+      <ul>
+        <li>&copy; created by Hassan Alsayhah</li>
+        <li><a href="index.html">Home</a></li>
+      </ul>
     </footer>
   </body>
 </html>
