--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html">Home</a>
-        <a href="/AI.html">Artificial Intelligence</a>
-        <a href="/ML.html">Machine Learning</a>
-        <a href="/form.html">Contribute</a>
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/AI.html">Artificial Intelligence</a></li>
+          <li><a href="/ML.html">Machine Learning</a></li>
+          <li><a href="/form.html">Contribute</a></li>
+        </ul>
       </nav>
       <h1>Who are we?</h1>
       <img
@@ -32,9 +34,11 @@
       algorithms.
     </p>
     <footer>
-      &copy; created by Hassan Alsayhah
-      <a href="/form.html">Contribute</a>
-      <a href="/contactInfo.html">Contact us</a>
+      <ul>
+        <li>&copy; created by Hassan Alsayhah</li>
+        <li><a href="/form.html">Contribute</a></li>
+        <li><a href="/contactInfo.html">Contact us</a></li>
+      </ul>
     </footer>
   </body>
 </html>
