css_2-exercise_1 & css_2-exercise_2

--- a/ML.html
+++ b/ML.html
@@ -53,10 +53,10 @@
 
         <!-- Llinear regression -->
         <tr>
-          <td>Linear regression</td>
-          <td>1796</td>
-          <td>I</td>
-          <td>
+          <td class="top">Linear regression</td>
+          <td class="top">1796</td>
+          <td class="top">I</td>
+          <td class="top">
             Linear regression models the relationship between a dependent
             variable and one or more independent variables by fitting a linear
             equation. It's used for predicting a continuous outcome.
@@ -101,10 +101,10 @@
 
         <!-- Support Vector Machines (SVM) 1964 -->
         <tr>
-          <td>Support Vector Machines (SVM)</td>
-          <td>1964</td>
-          <td>I</td>
-          <td>
+          <td class="top">Support Vector Machines (SVM)</td>
+          <td class="top">1964</td>
+          <td class="top">I</td>
+          <td class="top">
             SVM is a powerful algorithm for binary classification. It finds the
             optimal hyperplane that best separates two classes in
             high-dimensional space.
