--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       />
     </header>
     <p>
-      This website simplifes the concept of AI, and illustrates some of the
-      algorithms.
+      This website <em id="the_most_important">simplifes</em> the concept of AI,
+      and <em>illustrates</em> some of the algorithms.
     </p>
     <footer>
       <ul>
