--- a/ML.html
+++ b/ML.html
@@ -12,15 +12,16 @@
     <header>
       <nav>
         <ul>
+          <li><a href="/ML.html">Machine Learning</a></li>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/AI.html">Artificial Intelligence</a></li>
-          <li><a href="/ML.html">Machine Learning</a></li>
           <li><a href="/form.html">Contribute</a></li>
         </ul>
       </nav>
       <h1>Machine Learning</h1>
     </header>
-    <article>
+    <section>
+      <h2>What is ML?</h2>
       <p>
         Machine learning (ML) is a smart computer technique where machines learn
         from data. It's like teaching a computer to recognize patterns and make
@@ -32,7 +33,7 @@
         a cool way for computers to become smarter and help us solve all kinds
         of problems.
       </p>
-    </article>
+    </section>
 
     <section>
       <!-- Table of the most important Algos. in ML -->
