--- a/form.html
+++ b/form.html
@@ -91,7 +91,7 @@
         </div>
 
         <div>
-          <label for="">Your Degree:* </label>
+          <label for="">Degree:* </label>
           <div>
             <label for="high school">High school</label>
             <input
@@ -164,13 +164,11 @@
         </div>
 
         <div>
-          <label for="contributedIllustration">
-            Your illustration of the topic:*
-          </label>
+          <label for="contributedIllustration"> Illustration:* </label>
 
-          <p>
+          <div class="note">
             You should explain the topic as you want it to be in our website.*
-          </p>
+          </div>
 
           <textarea
             name="contributedIllustration"
@@ -183,12 +181,12 @@
         </div>
 
         <div>
-          <label for="file">File</label>
+          <label for="file">File:</label>
           <input type="file" name="file" id="file" />
         </div>
         <div>
           <div>
-            <label for="details">How you want it to be present?* </label>
+            <dive class="note" for="details">How you want it to be present?* </label>
           </div>
           <textarea
             name="details"
@@ -209,7 +207,7 @@
 
     <footer>
       <ul>
-        <li>&copy; created by Hassan Alsayhah</li>
+        <li class="rights">&copy; created by Hassan Alsayhah</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="/form.html">Contribute</a></li>
         <li><a href="/contactInfo.html">Contact us</a></li>
