--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img
         src="/assets/AI-logo.png"
         alt="A logo of Simplified AI."
-        width="550"
+        class="logo"
       />
     </header>
     <p>
@@ -35,7 +35,7 @@
     </p>
     <footer>
       <ul>
-        <li>&copy; created by Hassan Alsayhah</li>
+        <li class="rights">&copy; created by Hassan Alsayhah</li>
         <li><a href="/form.html">Contribute</a></li>
         <li><a href="/contactInfo.html">Contact us</a></li>
       </ul>
