--- a/ML.html
+++ b/ML.html
@@ -116,7 +116,7 @@
 
     <footer>
       <ul>
-        <li>&copy; created by Hassan Alsayhah</li>
+        <li class="rights">&copy; created by Hassan Alsayhah</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="/form.html">Contribute</a></li>
         <li><a href="/contactInfo.html">Contact us</a></li>
