--- a/contactInfo.html
+++ b/contactInfo.html
@@ -21,17 +21,19 @@
       <!-- Contact information -->
       <div>
         <label>Email: </label>
-        <a href="mailto:hassan.alsayhah@gmail.com">hassan.alsayhah@gmail.com</a>
+        <a class="link" href="mailto:hassan.alsayhah@gmail.com"
+          >hassan.alsayhah@gmail.com</a
+        >
       </div>
 
       <div>
         <label>Number: </label>
-        <a href="tel:+966563929094">+996 56 392 9094</a>
+        <a class="link" href="tel:+966563929094">+996 56 392 9094</a>
       </div>
 
       <div>
         <label>GitHub: </label>
-        <a href="https://github.com/HassanAli232">HassanAli232</a>
+        <a class="link" href="https://github.com/HassanAli232">HassanAli232</a>
       </div>
     </header>
 
@@ -87,7 +89,7 @@
 
     <footer>
       <ul>
-        <li>&copy; created by Hassan Alsayhah</li>
+        <li class="rights">&copy; created by Hassan Alsayhah</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="/form.html">Contribute</a></li>
         <li><a href="/contactInfo.html">Contact us</a></li>
