--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="/AI.html">Artificial Intelligence</a></li>
           <li><a href="/ML.html">Machine Learning</a></li>
           <li><a href="/form.html">Contribute</a></li>
+          <li><a href="/index-ar.html">العربية</a></li>
         </ul>
       </nav>
       <h1>Who are we?</h1>
