--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
     <link rel="stylesheet" href="dark_theme.css" />
     <title>AI Simplified</title>
   </head>
+
   <body>
+    <div class="loader_wrapper">
+      <div class="loader"></div>
+    </div>
     <header>
+      <div class="container" onclick="myFunction(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
       <nav>
-        <ul>
+        <ul class="menu">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/AI.html">Artificial Intelligence</a></li>
           <li><a href="/ML.html">Machine Learning</a></li>
