--- a/form-ar.html
+++ b/form-ar.html
@@ -9,7 +9,12 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <div class="container">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+        <ul class="menu">
             <li><a href="/form-ar.html">ساهم</a></li>
             <li><a href="/index-ar.html">الصفحة الرئيسية</a></li>
             <li><a href="/AI-ar.html">ذكاء اصطناعي</a></li>
