--- a/ML-ar.html
+++ b/ML-ar.html
@@ -10,7 +10,12 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <div class="container">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+        <ul class="menu">
           <li><a href="/ML-ar.html">تعلم الآلة</a></li>
           <li><a href="/index-ar.html">الصفحة الرئيسية</a></li>
           <li><a href="/AI-ar.html">ذكاء اصطناعي</a></li>
