--- a/ML.html
+++ b/ML.html
@@ -11,7 +11,12 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <div class="container">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+        <ul class="menu">
           <li><a href="/ML.html">Machine Learning</a></li>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/AI.html">Artificial Intelligence</a></li>
