--- a/form.html
+++ b/form.html
@@ -9,7 +9,12 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <div class="container">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+        <ul class="menu">
           <li><a href="/form.html">Contribute</a></li>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/AI.html">Artificial Intelligence</a></li>
