--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <div class="loader"></div>
     </div>
     <header>
-      <div class="container" onclick="myFunction(this)">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-      </div>
       <nav>
+        <div class="container">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
         <ul class="menu">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/AI.html">Artificial Intelligence</a></li>
