--- a/AI.html
+++ b/AI.html
@@ -11,16 +11,17 @@
   <body>
     <header>
       <nav>
-        <div class="container">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
-        </div>
         <ul class="menu">
+          <div class="container">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
           <li><a href="/AI.html">Artificial Intelligence</a></li>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/ML.html">Machine Learning</a></li>
           <li><a href="/form.html">Contribute</a></li>
+          <li><a href="/AI-ar.html">العربية</a></li>
         </ul>
       </nav>
       <h1>Artificial Intelligence</h1>
