--- a/ML-ar.html
+++ b/ML-ar.html
@@ -10,17 +10,17 @@
   <body>
     <header>
       <nav>
-        <div class="container">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
-        </div>
         <ul class="menu">
+          <div class="container">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
           <li><a href="/ML-ar.html">تعلم الآلة</a></li>
           <li><a href="/index-ar.html">الصفحة الرئيسية</a></li>
           <li><a href="/AI-ar.html">ذكاء اصطناعي</a></li>
           <li><a href="/form-ar.html">ساهم</a></li>
-          <li><a href="/index.html">En</a></li>
+          <li><a href="/ML.html">En</a></li>
         </ul>
       </nav>
       <h1>تعلم الآلة</h1>
