--- a/index-ar.html
+++ b/index-ar.html
@@ -13,14 +13,17 @@
     <title>الذكاء الاصطناعي مبسط</title>
   </head>
   <body>
+    <div class="loader_wrapper">
+      <div class="loader"></div>
+    </div>
     <header>
       <nav>
-        <div class="container">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
-        </div>
         <ul class="menu">
+          <div class="container">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
           <li><a href="/index-ar.html">الصفحة الرئيسية</a></li>
           <li><a href="/AI-ar.html">ذكاء اصطناعي</a></li>
           <li><a href="/ML-ar.html">تعلم الآلة</a></li>
