--- a/ML-ar.html
+++ b/ML-ar.html
@@ -41,7 +41,10 @@
 
     <section>
       <!-- جدول أشهر الخوارزميات في التعلم الآلي -->
-      <h2>بعض أشهر الخوارزميات المعروفة</h2>
+      <div class="header_date">
+        <h2>بعض أشهر الخوارزميات المعروفة</h2>
+        <div class="date">حُدث 10/4/2023</div>
+      </div>
       <table border="1">
         <!-- رأس الجدول -->
         <thead>
