--- a/ML.html
+++ b/ML.html
@@ -43,7 +43,10 @@
 
     <section>
       <!-- Table of the most important Algos. in ML -->
-      <h2>Some of the Most Known Algorithms</h2>
+      <div class="header_date">
+        <h2>Some of the Most Known Algorithms</h2>
+        <div class="date">modified 10/4/2023</div>
+      </div>
       <table border="1">
         <!-- Table head -->
         <thead>
