--- a/index-ar.html
+++ b/index-ar.html
@@ -32,11 +32,14 @@
         </ul>
       </nav>
       <h1>من نحن؟</h1>
-      <img
-        src="/assets/AI-logo.png"
-        alt="A logo of Simplified AI."
-        class="logo"
-      />
+      <div class="image_container">
+        <div class="water_mark-ar">HA</div>
+        <img
+          src="/assets/AI-logo.png"
+          alt="A logo of Simplified AI."
+          class="logo"
+        />
+      </div>
     </header>
     <p>
       هذا الموقع
