--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
         </ul>
       </nav>
       <h1>Who are we?</h1>
-      <img
-        src="/assets/AI-logo.png"
-        alt="A logo of Simplified AI."
-        class="logo"
-      />
+      <div class="image_container">
+        <div class="water_mark">HA</div>
+        <img
+          src="/assets/AI-logo.png"
+          alt="A logo of Simplified AI."
+          class="logo"
+        />
+      </div>
     </header>
     <p>
       This website <em id="the_most_important">simplifes</em> the concept of AI,
