--- a/AI-ar.html
+++ b/AI-ar.html
@@ -39,7 +39,16 @@
       </p>
     </article>
 
-    <table border="1" width="100" height="200">
+    <div class="image_container">
+      <div class="water_mark-ar">HA</div>
+      <img
+        src="/assets/AI-logo.png"
+        alt="A logo of Simplified AI."
+        class="logo"
+      />
+    </div>
+
+    <!-- <table border="1" width="100" height="200">
       <tr>
         <td><strike>مرحبًا</strike> "سيري"</td>
         <td rowspan="4">
@@ -115,7 +124,7 @@
           تصحيح تلقائي محسن <img src="/assets/cursor.png" alt="" />
         </td>
       </tr>
-    </table>
+    </table> -->
 
     <footer>
       <ul>
