--- a/AI.html
+++ b/AI.html
@@ -41,7 +41,16 @@
       </p>
     </article>
 
-    <table border="1" width="100" height="200">
+    <div class="image_container">
+      <div class="water_mark">HA</div>
+      <img
+        src="/assets/AI-logo.png"
+        alt="A logo of Simplified AI."
+        class="logo"
+      />
+    </div>
+
+    <!-- <table border="1" width="100" height="200">
       <tr>
         <td><strike>Hey</strike> "Siri"</td>
         <td rowspan="4">
@@ -118,7 +127,7 @@
           Improved autocorrect <img src="/assets/cursor.png" alt="" />
         </td>
       </tr>
-    </table>
+    </table> -->
 
     <footer>
       <ul>
