--- a/ML-ar.html
+++ b/ML-ar.html
@@ -20,6 +20,7 @@
           <li><a href="/index-ar.html">الصفحة الرئيسية</a></li>
           <li><a href="/AI-ar.html">ذكاء اصطناعي</a></li>
           <li><a href="/form-ar.html">ساهم</a></li>
+          <li><a href="/ttt.html">ألعاب-صغيرة</a></li>
           <li><a href="/ML.html">En</a></li>
         </ul>
       </nav>
