--- a/contactInfo.html
+++ b/contactInfo.html
@@ -19,6 +19,7 @@
           <li><a href="/AI.html">Artificial Intelligence</a></li>
           <li><a href="/ML.html">Machine Learning</a></li>
           <li><a href="/form.html">Contribute</a></li>
+          <li><a href="/ttt.html">mini-games</a></li>
           <li><a href="/contactInfo-ar.html">العربية</a></li>
         </ul>
       </nav>
