--- a/form-ar.html
+++ b/form-ar.html
@@ -19,6 +19,7 @@
             <li><a href="/index-ar.html">الصفحة الرئيسية</a></li>
             <li><a href="/AI-ar.html">ذكاء اصطناعي</a></li>
             <li><a href="/ML-ar.html">تعلم الآلة</a></li>
+            <li><a href="/ttt.html">ألعاب-صغيرة</a></li>
             <li><a href="/form.html">En</a></li>
         </ul>
       </nav>
