--- a/index-ar.html
+++ b/index-ar.html
@@ -28,6 +28,7 @@
           <li><a href="/AI-ar.html">ذكاء اصطناعي</a></li>
           <li><a href="/ML-ar.html">تعلم الآلة</a></li>
           <li><a href="/form-ar.html">ساهم</a></li>
+          <li><a href="/ttt.html">ألعاب-صغيرة</a></li>
           <li><a href="/index.html">En</a></li>
         </ul>
       </nav>
