--- a/AI.html
+++ b/AI.html
@@ -21,6 +21,7 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/ML.html">Machine Learning</a></li>
           <li><a href="/form.html">Contribute</a></li>
+          <li><a href="/ttt.html">mini-games</a></li>
           <li><a href="/AI-ar.html">العربية</a></li>
         </ul>
       </nav>
