--- a/ML.html
+++ b/ML.html
@@ -21,6 +21,7 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/AI.html">Artificial Intelligence</a></li>
           <li><a href="/form.html">Contribute</a></li>
+          <li><a href="/ttt.html">mini-games</a></li>
           <li><a href="/ML-ar.html">العربية</a></li>
         </ul>
       </nav>
