--- a/contactInfo-ar.html
+++ b/contactInfo-ar.html
@@ -19,6 +19,7 @@
           <li><a href="/AI-ar.html">ذكاء اصطناعي</a></li>
           <li><a href="/ML-ar.html">تعلم الآلة</a></li>
           <li><a href="/form-ar.html">ساهم</a></li>
+          <li><a href="/ttt.html">ألعاب-صغيرة</a></li>
           <li><a href="/contactInfo.html">En</a></li>
         </ul>
       </nav>
