--- a/form.html
+++ b/form.html
@@ -19,6 +19,7 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/AI.html">Artificial Intelligence</a></li>
           <li><a href="/ML.html">Machine Learning</a></li>
+          <li><a href="/ttt.html">mini-games</a></li>
           <li><a href="/form-ar.html">العربية</a></li>
         </ul>
       </nav>
