--- a/form.html
+++ b/form.html
@@ -39,8 +39,8 @@
       </p>
     </section>
     <form
-      action="thank.html"
-      method="get"
+      action="/process-form"
+      method="post"
       autocomplete="on"
       enctype="multipart/form-data"
     >
